--- a/src/app/article-detail.component.html
+++ b/src/app/article-detail.component.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<h2>Second Article</h2>
+<div class="col-md-12" >
+</div>
+<h3 class="product">Details for product id {{articleID}}</h3>
+<h2>{{articleTitle}}</h2>
+<img src="" alt="{{articleImageUrl}}">
