--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,29 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-6 jumbotron">
-      <h1>Article List</h1>
-      <div class="row">
-        <ul *ngFor="let article of articles" [class.selected]="article === selectedArticle" (click) = onSelect(article) class="col-md-12">
-          <li  class="box box-hidden" (click)="onSelect(article)">
-            <div class="row">
+    <div class=" col-md-6 ">
+      <h2>Article List</h2>
+      <div class="row list-group">
+        <div *ngFor="let article of articles" [class.selected]="article === selectedArticle" (click) = onSelect(article) class="col-md-12  box-hidden ">
+          <a href="#" class=" list-group-item" [routerLink]="['article', article.id]">
+          <div  class="box" (click)="onSelect(article)">
+            <div class="row" >
               <div class="col-md-3">
-                <img src="{{article.imageUrl}}" alt="test" height="200px" width="200px">
+                <img class="" src="{{article.imageUrl}}" alt="test" height="200px" width="200px">
               </div>
               <div class="col-md-9">
-                <a [routerLink]="['article', article.id]"><h2 >{{article.title}}</h2></a>
-                <p>{{article.text}}</p>
+                <h4>{{article.title}}</h4>
+                <p  class="text-left  text-justify article-p">{{article.text}}</p>
+                <p>{{article.comments}} Comments</p>
               </div>
             </div>
-          </li>
-
-        </ul>
-        <input id="load-more" type="button" class="btn" value="Load more">
+          </div>
+          </a>
+        </div>
       </div>
-
+      <div class="loadNext-block">
+        <input id="load-more" type="button" class="btn btn-lg" value="Load more">
+      </div>
     </div>
     <div class="col-md-6">
       <router-outlet></router-outlet>
