--- a/src/app/article-detail.component.html
+++ b/src/app/article-detail.component.html
@@ -1,6 +1,25 @@
 <h2>Second Article</h2>
 <div class="col-md-12" >
+  <div class="row">
+    <img class="center-block" src="{{detailArt.imageUrl}}" alt="" width="100%" height="350px">
+  </div>
+  <div class="row description-detail">
+    <blockquote>
+      <p>{{detailArt.text}}</p>
+    </blockquote>
+  </div>
+  <div class="row">
+    <h3>Comments</h3>
+    <div *ngFor="let comment of detailArt.comments">
+        <div class="panel panel-success">
+          <div class="panel-heading">
+            <h3 class="panel-title">Author: {{comment.author}}</h3>
+          </div>
+          <div class="panel-body">
+            Comment:{{comment.text}}
+          </div>
+        </div>
+    </div>
+  </div>
 </div>
-<h3 class="product">Details for product id {{articleID}}</h3>
-<h2>{{articleTitle}}</h2>
-<img src="" alt="{{articleImageUrl}}">
+
